--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "async": "0.9.0",
     "browserify": "9.0.3",
     "closure-util": "1.5.0",
+    "earcut": "1.4.2",
     "fs-extra": "0.12.0",
     "glob": "5.0.3",
     "graceful-fs": "3.0.2",
@@ -61,6 +62,7 @@
     "slimerjs-edge": "0.10.0-pre-2"
   },
   "ext": [
+    "earcut",
     "rbush",
     {"module": "pixelworks", "browserify": true}
   ]
